# voyageai-bechmark

./: README.md  benchmark.py  pyproject.toml  sample_texts.json  sample_texts.txt  voyageai_benchmark.py
logs/: voyage-3-large-10-concurrency.txt  voyage-3-large-no-concurrency.txt  voyage-3.5-lite-10-concurrency.txt  voyage-3.5-lite-no-concurrency.txt
